# tic-tac-toe

./: .gitignore  README.md
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
TicTacToe/: .gitignore  AdminLogin.qml  CMakeLists.txt  Doxyfile  Footer.qml  Header.qml  Home.qml  Main.qml  PlayArea.qml  PlayerManager.qml  PlayerSelection.qml  controllers.cpp  controllers.h  cryptclass.cpp  cryptclass.h  databasecontroller.cpp  databasecontroller.h  gamelogic.cpp  gamelogic.h  main.cpp  resources.qrc  run_doxygen.sh
TicTacToe/config/: settings.ini
TicTacToe/controllers/: databasecontroller.cpp  databasecontroller.h  databasemanager.cpp  databasemanager.h  filemanager.cpp  filemanager.h  gamelogic.cpp  gamelogic.h  playermanger.cpp  playermanger.h  systemsettings.cpp  systemsettings.h  usercontroller.cpp  usercontroller.h
TicTacToe/database/: copy_db.sh  db_creator.py  tictactoe.db
TicTacToe/documents/: PokyChanges.md  algorithm.txt  copilot_setup.md  pokyBuildInstrucitons.md  running_unit_tests.md  setup_sdk_cross_compile.md  todo.txt
TicTacToe/doxygen/html/: annotated.html  controllers_8h_source.html  files.html  functions.html  functions_func.html
TicTacToe/doxygen/html/search/: all_1.js  all_4.js  classes_0.js  functions_0.js  functions_2.js  functions_3.js  searchdata.js
TicTacToe/gtests/: gtest_1_main.cpp
TicTacToe/html/: annotated.html  classCryptClass-members.html  classCryptClass.html  classes.html  controllers_8h.html  controllers_8h__incl.map  controllers_8h__incl.md5  controllers_8h_source.html  cryptclass_8h.html  cryptclass_8h__incl.map  cryptclass_8h__incl.md5  cryptclass_8h_source.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  namespaceControllers.html  namespaceThreads.html  namespaces.html
TicTacToe/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  namespaces_1.js  searchdata.js
TicTacToe/javaScript/: onePlayerMode.js
TicTacToe/latex/: annotated.tex  classCryptClass.tex  controllers_8h.tex  controllers_8h__incl.md5  cryptclass_8h.tex  cryptclass_8h__incl.md5  files.tex  namespaceControllers.tex  namespaceThreads.tex  namespaces.tex  refman.tex
TicTacToe/models/: aboutinfo.cpp  aboutinfo.h  adminplayermodel.cpp  adminplayermodel.h  gamemodel.cpp  gamemodel.h  gameplaymodel.cpp  gameplaymodel.h  highscoremodel.cpp  highscoremodel.h  playermodel.cpp  playermodel.h  systemsettingmodel.cpp  systemsettingmodel.h
TicTacToe/pokyScripts/: tictactoe.sh
TicTacToe/qml/: About.qml  AdminLogin.qml  AdminPage.qml  DateTimeSetting.qml  EditFieldForm.qml  EditForm.qml  EditPlayerForm.qml  Footer.qml  GameFooter.qml  GameHeader.qml  Header.qml  HighScore.qml  Home.qml  Main.qml  PlayArea.qml  PlayerListModel.qml  PlayerManager.qml  PlayerSelection.qml  PopupDialog.qml  PopupMsg.qml  TicTacToeBoard.qml  WinStrike.qml
TicTacToe/qtests/: qtest_1_main.cpp  test_databasemanager.cpp  test_databasemanager.h  test_gamelogic.cpp  test_gamelogic.h  test_main.cpp  test_systemsettings.cpp  test_systemsettings.h
setup/: install-qt-noninteractive.qs  install.sh  setup_dir.sh
